--- a/html/about.html
+++ b/html/about.html
@@ -70,12 +70,11 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-                      <p>I'm Matias Gonzalez. I'm from Villa Alemana, Chile. I came to the US about two years ago, in fall 2018. 
-                        At that time, I didn't know how to speak English, so I took English lessons for two semesters until I became 
-                        proficient in the language. After I learned English, I applied to BYU, and to my surprise, they accepted me. 
-                        The last two years of my life have been one of the craziest and greatest adventures I've ever been to. 
-                        Looking back, I cannot comprehend how I have been able to accomplish so many things in such a short time and with so few resources. 
-                        Therefore, I look to heaven, and I have so many reasons to be grateful for.</p>
+                      <p>I'm Matias Gonzalez, and I'm from Villa Alemana, Chile. I came to the US about two years ago, in the fall of 2018. 
+                        At that time, I didn't know how to speak English, so I took English lessons for two semesters until I became proficient 
+                        in the language. After learning English, I applied to BYU, and to my surprise, they accepted me. The last two years of 
+                        my life have been one of the craziest and greatest adventures I've ever experienced. Looking back, I cannot comprehend 
+                        how I have been able to accomplish so many things in such a short time and with so few resources.</p>
                     </div>
                   </div>
                 </div>
@@ -132,7 +131,7 @@
    <p class="first">Phone Number: 801-432-7658 | Email: mgonzz@outlook.com</p>
 </div>
 <div class="first">
-  <a href="https://www.linkedin.com/in/mat%C3%ADas-gonz%C3%A1lez-403442147/" target="_blank" title="Linkedin profile of Matias">Linkedin</a> | <a href="https://www.facebook.com/matiasgonzalezy/" target="_blank" title="Facebook profile of Matias">Facebook</a>
+  <a href="https://www.linkedin.com/in/matgonzalezya/" target="_blank" title="Linkedin profile of Matias">Linkedin</a> | <a href="https://www.facebook.com/matiasgonzalezy/" target="_blank" title="Facebook profile of Matias">Facebook</a>
 </div>
 
 
