--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
    <p class="first">Phone Number: 801-432-7658 | Email: mgonzz@outlook.com</p>
 </div>
 <div class="first">
-  <a href="https://www.linkedin.com/in/mat%C3%ADas-gonz%C3%A1lez-403442147/" target="_blank" title="Linkedin profile of Matias">Linkedin</a> | <a href="https://www.facebook.com/matiasgonzalezy/" target="_blank" title="Facebook profile of Matias">Facebook</a>
+  <a href="https://www.linkedin.com/in/matgonzalezya/" target="_blank" title="Linkedin profile of Matias">Linkedin</a> | <a href="https://www.facebook.com/matiasgonzalezy/" target="_blank" title="Facebook profile of Matias">Facebook</a>
 </div>
 
 
